--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -11,6 +11,14 @@ body {
     font-size: 10px;
 }
 
+img {
+    max-width: 75%;
+    max-height: 75%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /* Navbar section */
 .nav {
     width: 100%;
